tests/bad/objects/5.lat
class A {
    int a;

    void x() {
        y();
    }
}

int main () {
    return 0;
}